Improve code
Mainly minor changes and formatting.