@@ -1,6 +1,5 @@
 package net.slqmy.template_paper_plugin.util;
 
-import java.util.stream.Collectors;
 import java.util.Collections;
 import java.util.List;
 import java.util.jar.JarFile;
@@ -25,7 +24,7 @@ public class FileUtil {
       String jarFilePath = jarPath.substring(jarPathPrefix.length(), exclamationMarkIndex);
 
       try (JarFile jarFile = new JarFile(jarFilePath)) {
-        return jarFile.stream().map(JarEntry::getName).filter(name -> name.startsWith(resourcePath) && !name.equals(resourcePath)).map(name -> name.substring(resourcePath.length())).collect(Collectors.toList());
+        return jarFile.stream().map(JarEntry::getName).filter(name -> name.startsWith(resourcePath) && !name.equals(resourcePath)).map(name -> name.substring(resourcePath.length())).toList();
       }
     } catch (IOException exception) {
       exception.printStackTrace();
